Fix: Dark Mode icones
Os icones estavam com um problema de caminhos diferentes devido ao nivel do html, como as duas páginas utilizam os mesmos icones foi preciso realizar um tratamento especifico no caminho.

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -2,7 +2,6 @@
     .head-container{
         max-width: 1200px;
         height: 40px; 
-        padding: 0px 10px;
         border-radius: 10px;    
     }
 
